[package]
name = "rust_functions_runtime"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
rquickjs = { version = "0.9", features = ["futures", "loader", "macro"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace", "cors"] }
