[package]
name = "rust_functions_runtime"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
rquickjs = { version = "0.9", features = ["futures", "loader", "macro"] }
dashmap = "6"
tower-http = { version = "0.6", features = ["trace", "cors"] }
oxc_allocator = "0.140"
oxc_codegen = "0.140"
oxc_parser = "0.140"
oxc_semantic = "0.140"
oxc_span = "0.140"
oxc_transformer = "0.140"

